@@ -7,7 +7,7 @@ AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 
 dnl Every other copy of the package version number gets its value from here
-AM_INIT_AUTOMAKE(xjadeo, 0.3.13)
+AM_INIT_AUTOMAKE(xjadeo, 0.3.14)
 
 dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
 AM_CONFIG_HEADER(config.h)
@@ -96,7 +96,7 @@ fi
 
 if test "x$enable_sdl" != "xno"; then
         AM_PATH_SDL(1.1.6, [ AC_DEFINE(HAVE_SDL) ])
-        AM_PATH_SDL(1.2.9, [ AC_DEFINE(HAVE_SDL) ])
+        #AM_PATH_SDL(1.2.9, [ AC_DEFINE(HAVE_SDL) ])
 
 	# SDL TTF detect
 
