@@ -89,8 +89,6 @@ long jack_poll_frame (void) {
 	jack_transport_query(jack_client, &jack_position);
 	jack_time = jack_position.frame / (double) jack_position.frame_rate;
 //	fprintf(stdout, "jack calculated time: %lf sec\n", jack_time);
-	frame = (long) rint((double) frames * (double) jack_time / (double) duration);
-//	if (frame!= rint(framerate * jack_time) ) printf("\nDAMN %i %f\n",frame, rint(framerate * jack_time));
-//	frame = rint(framerate * jack_time);
+	frame = (long) floor((double) frames * (double) jack_time / (double) duration);
 	return(frame);
 }
